--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
 	<string name = "ordinary">ordinary</string>
 	<string name = "unimportant">unimportant</string>
 	<string name = "browse">Browse</string>
+	<string name = "_oops">Oooops</string>
+
+	<!-- TODO: Remove or change this placeholder text -->
+	<string name = "hello_blank_fragment">Hello blank fragment</string>
 </resources>
